<resources>
    <string name="app_name">Softonic Quiz</string>
    <string name="imgdiscription">img</string>
    <string name="quiz">Quiz</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="verify_and_signin">Verify and Signin</string>
    <string name="logout">LogOut</string>
    <string name="softonic_quiz">Softonic Quiz</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="highscore">\"Highscore: \"</string>
    <string name="otpText">Enter the OTP below and signIn</string>
    <string name="confirm">Confirm</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question Attempted: 1/x</string>
    <string name="_00_30">00:30</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="here_will_be_the_question_text_nhere_will_be_the_question_text_nhere_will_be_the_question_text">Here will be the question text\nHere will be the question text\nHere will be the question text</string>
    <string name="questions">question_1_x</string>
</resources>