<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Manage_OTP">


    <TextView
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_marginTop="140dp"
        android:text="@string/otpText"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/t2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/enter_otp_here"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        android:autofillHints="no" />

    <Button
        android:id="@+id/b2"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:text="@string/verify_and_signin"
        android:textSize="20sp"
        android:background="@drawable/login_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />
</androidx.constraintlayout.widget.ConstraintLayout>