<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="285dp"
        android:layout_height="70dp"
        android:text="Welcome to Result Dashbaord "
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="114dp"
        android:layout_height="33dp"
        android:layout_marginTop="76dp"
        android:text="@string/score_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_view_highscore"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.822" />

    <TextView
        android:id="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:text="@string/highscore_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Logout"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_below="@id/text_view_score"
        android:layout_marginTop="100dp"
        android:text="@string/question_1_x"
        app:layout_constraintBottom_toTopOf="@+id/text_view_score"
        app:layout_constraintEnd_toEndOf="@+id/text_view_score"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_view_score"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:background="@drawable/login_button_selector"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />


</androidx.constraintlayout.widget.ConstraintLayout>